<resources>
    <string name="app_name">Kotlin_Version_Playground</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_post">Post</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_notif_personal"><font size="20">Personal</font></string>
    <string name="title_notif_following"><font size="20">Following</font></string>
</resources>
