<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:width="10dp"
        android:title="@string/title_home" />
    <!--android:height="10dp"
    android:padding="0dp"
    android:minWidth="60dp"-->


    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover_red_24dp"
        android:title= "@string/title_discover" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_post_black_24dp"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_red_line_24dp"
        android:title="@string/title_profile" />

</menu>
